# test-tauri-app

./: CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  snapcraft.yaml  vite.config.js
.changeset/: blue-glasses-exercise.md  bright-actors-sip.md  config.json  early-turtles-carry.md  gentle-walls-tie.md  light-terms-pull.md  old-boats-begin.md  perfect-maps-study.md  rotten-bananas-listen.md  sharp-ears-roll.md  shy-buses-double.md  soft-plums-eat.md  spotty-brooms-perform.md  twenty-cars-burn.md  two-numbers-help.md  yellow-emus-do.md
.github/workflows/: pull_request.yml  release.yml
scripts/sync-metadata/: Cargo.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  utils.rs
src/routes/: +page.svelte
