[package]
name = "test-tauri-app"
version = "0.0.9"
description = ""
license = "MIT"
authors = ["Mayank Verma <errmayank@gmail.com>"]
repository = ""
homepage = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta.19", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.24", features = [] }
tauri-plugin-shell = { version = "2.0.0-beta.9" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120" }
thiserror = { version = "1.0.63" }
strip-ansi-escapes = { version = "0.2.0" }
